Update View Chart Button Link

--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -46,11 +46,13 @@ const internalNavLinks = [
     id="alp-reference-range"
   >
     <div class="wrapper">
-      <h1 class="alp-reference-range__title">tracking down <br class="sm:hidden" /> hypophosphatasia</h1>
+      <h1 class="alp-reference-range__title">
+        tracking down <br class="sm:hidden" /> hypophosphatasia
+      </h1>
     </div>
 
     <article class="alp-reference-range__identify-wrapper">
-        <div class="red-string"></div>
+      <div class="red-string"></div>
       <img
         class="asset__bg asset__bg--back"
         src="/assets/images/identifying-hpp/back-desktop.png"
@@ -109,13 +111,16 @@ const internalNavLinks = [
                 a routine blood test.<sup>1-8</sup>
               </p>
               <ul class="alp-reference-range__identify-ul">
-
-
                 <li>
-                  <sup class="symbol-sup positioned">*</sup>ALP ranges must be age- and sex-adjusted. Patient should be evaluated for other symptoms of HPP and differential diagnoses should be ruled out.<sup>1,5-9</sup>
+                  <sup class="symbol-sup positioned">*</sup>ALP ranges must be
+                  age- and sex-adjusted. Patient should be evaluated for other
+                  symptoms of HPP and differential diagnoses should be ruled
+                  out.<sup>1,5-9</sup>
                 </li>
                 <li>
-                  <sup class="symbol-sup positioned">†</sup> Persistently low alkaline phosphatase can be defined as having 2 exams below normal value at intervals of more than 30 days.
+                  <sup class="symbol-sup positioned">†</sup> Persistently low alkaline
+                  phosphatase can be defined as having 2 exams below normal value
+                  at intervals of more than 30 days.
                 </li>
               </ul>
             </div>
@@ -128,7 +133,7 @@ const internalNavLinks = [
       variation="variant-2"
       buttonLabel="View Chart"
       content="Look back at what constitutes low alkaline phosphatase activity"
-      linkURL="#"
+      linkURL="/alpd-academy/#low-alp"
       bypassModal
     />
 
@@ -259,7 +264,8 @@ const internalNavLinks = [
                     smoking, inflammation, and drugs
                   </li>
                   <li>
-                    PLP must be taken in fasting state as it may decrease after high-carbohydrate intake
+                    PLP must be taken in fasting state as it may decrease after
+                    high-carbohydrate intake
                   </li>
                 </ul>
               </div>
@@ -383,7 +389,8 @@ const internalNavLinks = [
                       smoking, inflammation, and drugs
                     </li>
                     <li>
-                      PLP must be taken in fasting state as it may decrease after high-carbohydrate intake
+                      PLP must be taken in fasting state as it may decrease
+                      after high-carbohydrate intake
                     </li>
                   </ul>
                 </td>
@@ -477,7 +484,8 @@ const internalNavLinks = [
         <p
           class="color--white mb-1 md:text--center genetic-testing-role__paragraph"
         >
-        While genetic testing for hypophosphatasia can be a useful tool, it remains an evolving science with certain limitations and challenges.
+          While genetic testing for hypophosphatasia can be a useful tool, it
+          remains an evolving science with certain limitations and challenges.
         </p>
       </div>
       <div class="line-container first">
@@ -696,58 +704,74 @@ const internalNavLinks = [
   <References>
     <p class="identifying-hpp-page__references">
       <strong>References: 1.</strong> Bishop N, Munns CF, Ozono K. Transformative
-      therapy in hypophosphatasia. <em>Arch Dis Child.</em> 2016;101(6):514-515. <strong>2.</strong>
+      therapy in hypophosphatasia. <em>Arch Dis Child.</em> 2016;101(6):514-515.
+      <strong>2.</strong>
       Desborough R, Nicklin P, Gossiel F, et al. Clinical and biochemical characteristics
-      of adults with hypophosphatasia attending a metabolic bone clinic. <em>Bone.</em> 2021;144:115795. <strong>3.</strong> Bloch-Zupan A. Hypophosphatasia: diagnosis and clinical
-      signs - a dental surgeon perspective. <em>Int J Paediatr Dent.</em> 2016;26(6):426-438.
+      of adults with hypophosphatasia attending a metabolic bone clinic. <em
+        >Bone.</em
+      > 2021;144:115795. <strong>3.</strong> Bloch-Zupan A. Hypophosphatasia: diagnosis
+      and clinical signs - a dental surgeon perspective. <em
+        >Int J Paediatr Dent.</em
+      > 2016;26(6):426-438.
       <strong>4.</strong> Shapiro JR, Lewiecki EM. Hypophosphatasia in adults: clinical
       assessment and treatment considerations. <em>J Bone Miner Res.</em> 2017;32(10):1977-1980.
-      <strong>5.</strong> Rockman-Greenberg C. Hypophosphatasia. <em>Pediatr Endocrinol Rev.</em> 2013;10(suppl 2):380-388. <strong>6.</strong> McKiernan FE, Berg RL, Fuehrer
-      J. Clinical and radiographic findings in adults with persistent hypophosphatasemia. <em>J Bone Miner Res.</em> 2014;29(7):1651-1660. <strong>7.</strong> Whyte MP. Hypophosphatasia:
-      nature's window on alkaline phosphatase function in humans. In: Bilezikian
-      JP, Raisz LG, Martin TJ, eds. <em>Principles of Bone Biology.</em> 3rd ed. Academic
-      Press; 2008:1573-1598.
+      <strong>5.</strong> Rockman-Greenberg C. Hypophosphatasia. <em
+        >Pediatr Endocrinol Rev.</em
+      > 2013;10(suppl 2):380-388. <strong>6.</strong> McKiernan FE, Berg RL, Fuehrer
+      J. Clinical and radiographic findings in adults with persistent hypophosphatasemia.
+      <em>J Bone Miner Res.</em> 2014;29(7):1651-1660. <strong>7.</strong> Whyte
+      MP. Hypophosphatasia: nature's window on alkaline phosphatase function in humans.
+      In: Bilezikian JP, Raisz LG, Martin TJ, eds. <em
+        >Principles of Bone Biology.</em
+      > 3rd ed. Academic Press; 2008:1573-1598.
       <strong>8.</strong> Bianchi ML, Bishop NJ, Guañabens N, et al; Rare Bone Disease
       Action Group of the European Calcified Tissue Society. Hypophosphatasia in
-      adolescents and adults: overview of diagnosis and treatment. <em>Osteoporos Int.</em>
+      adolescents and adults: overview of diagnosis and treatment. <em
+        >Osteoporos Int.</em
+      >
       2020;31(8):1445-1460. <strong>9.</strong> Vieira LHR, Peixoto KC, Flósi CL,
       Fleiuss de Farias ML, Madeira M. Active search of adult patients with persistently
-      low serum alkaline phosphatase levels for diagnosis of hypophosphatasia. <em>Arch Endocrinol Metab.</em> 2021;65(3):289-294. <strong>10.</strong> NORD. Hypophosphatasia.
-      Accessed March 30, 2023. <a
+      low serum alkaline phosphatase levels for diagnosis of hypophosphatasia. <em
+        >Arch Endocrinol Metab.</em
+      > 2021;65(3):289-294. <strong>10.</strong> NORD. Hypophosphatasia. Accessed
+      March 30, 2023. <a
         href="https://rarediseases.org/rare-diseases/hypophosphatasia/"
         target="_blank"
         >https://rarediseases.org/rare-diseases/hypophosphatasia/</a
       >
       <strong>11.</strong>
       Mornet E, Nunes ME. Hypophosphatasia. In: Adam MP, Ardinger HH, Pagon RA, et
-      al, eds. <em>GeneReviews®.</em> University of Washington; 2007. Accessed March 30, 2023.
+      al, eds. <em>GeneReviews®.</em> University of Washington; 2007. Accessed March
+      30, 2023.
       <a href="https://www.ncbi.nlm.nih.gov/books/NBK1150/" target="_blank"
         >https://www.ncbi.nlm.nih.gov/books/NBK1150/</a
       >
       <strong>12.</strong> Mornet E. Molecular genetics of hypophosphatasia and phenotype-genotype
-      correlations. <em>Subcell Biochem.</em> 2015;76:25-43. <strong>13.</strong>
+      correlations. <em>Subcell Biochem.</em> 2015;76:25-43. <strong>13.</strong
+      >
       Kamińska J, Dymicka-Piekarska V, Tomaszewska J, Matowicka-Karna J, Koper-Lenkiewicz
       OM. Diagnostic utility of protein in creatinine ratio (P/C ratio) in spot urine
       sample within routine clinical practice. <em>Crit Rev Clin Lab Sci.</em> 2020;57(5):345-364.
       <strong>14.</strong> Shajani-Yi Z, Ayala-Lopez N, Black M, Dahir KM. Urine
       phosphoethanolamine is a specific biomarker for hypophosphatasia in adults.
-      <em>Bone.</em> 2022;163:116504. <strong>15.</strong> Phillips KA, Deverka PA, Hooker
-      GW, Douglas MP. Genetic test availability and spending: where are we now? Where
-      are we going? <em>Health Aff (Millwood).</em> 2018;37(5):710-716. <strong
-        >16.</strong
-      > Mornet E. Hypophosphatasia. <em>Metabolism.</em> 2018;82:142–155. <strong
-        >17.</strong
-      > Khan AA, Josse R, Kannu P, et al. Hypophosphatasia: Canadian update on diagnosis
-      and management. <em>Osteoporos Int.</em> 2019;30(9):1713-1722. <strong>18.</strong>
+      <em>Bone.</em> 2022;163:116504. <strong>15.</strong> Phillips KA, Deverka PA,
+      Hooker GW, Douglas MP. Genetic test availability and spending: where are we
+      now? Where are we going? <em>Health Aff (Millwood).</em> 2018;37(5):710-716.
+      <strong>16.</strong> Mornet E. Hypophosphatasia. <em>Metabolism.</em> 2018;82:142–155.
+      <strong>17.</strong> Khan AA, Josse R, Kannu P, et al. Hypophosphatasia: Canadian
+      update on diagnosis and management. <em>Osteoporos Int.</em> 2019;30(9):1713-1722.
+      <strong>18.</strong>
       NIH MedlinePlus. ALPL gene. National Library of Medicine. 2018. Accessed March
       30, 2023. <a
         href="https://medlineplus.gov/genetics/gene/alpl/"
         target="_blank">https://medlineplus.gov/genetics/gene/alpl/</a
       >
       <strong>19.</strong>
-      Horton RH, Lucassen AM. Recent developments in genetic/genomic medicine. <em>Clin Sci (Lond).</em> 2019;133(5):697-708. <strong>20.</strong> Weiss MJ, Cole DE, Ray
-      K, et al. A missense mutation in the human liver/bone/kidney alkaline phosphatase
-      gene causing a lethal form of hypophosphatasia. <em>Proc Natl Acad Sci.</em> 1988;85:7666-7669.
+      Horton RH, Lucassen AM. Recent developments in genetic/genomic medicine. <em
+        >Clin Sci (Lond).</em
+      > 2019;133(5):697-708. <strong>20.</strong> Weiss MJ, Cole DE, Ray K, et al.
+      A missense mutation in the human liver/bone/kidney alkaline phosphatase gene
+      causing a lethal form of hypophosphatasia. <em>Proc Natl Acad Sci.</em> 1988;85:7666-7669.
       <strong>21.</strong> The ALPL Gene Variant Database. JKU Faculty of Medicine.
       Accessed March 30, 2023.
       <a href="https://alplmutationdatabase.jku.at/" target="_blank"
@@ -755,18 +779,21 @@ const internalNavLinks = [
       >
       <strong>22.</strong> Jandl NM, Schmidt T, Rolvien T, et al. Genotype-phenotype
       associations in 72 adults with suspected ALPL-associated hypophosphatasia.
-      <em>Calc Tissue Int.</em> 2021;108(3):288-301. <strong>23.</strong> Nunes ME. Hypophosphatasia.
-      <em>GeneReviews®.</em> 2007;1993–2002. <strong>24.</strong> Whyte MP, Leung E, Wilcox
-      WR, et al. Natural history of perinatal and infantile hypophosphatasia: a retrospective
-      study. <em>J Pediatr.</em> 2019;209:116-124.e4. <strong>25.</strong> Zurutuza L, Muller
-      F, Gibrat JF, et al. Correlations of genotype and phenotype in hypophosphatasia.
-      <em>Hum Mol Genet.</em> 1999;8(6):1039-1046. <strong>26.</strong> Hofmann C, Girschick
-      HJ, Mentrup B, et al. Clinical aspects of hypophosphatasia: an update. <em>Clin Rev Bone Miner Metab.</em> 2013;11:60-70. <strong>27.</strong> Sanabria-de la Torre
-      R, Martínez-Heredia L, González-Salvatierra S, et al. Characterization of genetic
-      variants of uncertain significance for the ALPL gene in patients with adult
-      hypophosphatasia. <em>Front Endocrinol (Lausanne).</em> 2022;13:863940. <strong
-        >28.</strong
-      >
+      <em>Calc Tissue Int.</em> 2021;108(3):288-301. <strong>23.</strong> Nunes ME.
+      Hypophosphatasia.
+      <em>GeneReviews®.</em> 2007;1993–2002. <strong>24.</strong> Whyte MP, Leung
+      E, Wilcox WR, et al. Natural history of perinatal and infantile hypophosphatasia:
+      a retrospective study. <em>J Pediatr.</em> 2019;209:116-124.e4. <strong
+        >25.</strong
+      > Zurutuza L, Muller F, Gibrat JF, et al. Correlations of genotype and phenotype
+      in hypophosphatasia.
+      <em>Hum Mol Genet.</em> 1999;8(6):1039-1046. <strong>26.</strong> Hofmann C,
+      Girschick HJ, Mentrup B, et al. Clinical aspects of hypophosphatasia: an update.
+      <em>Clin Rev Bone Miner Metab.</em> 2013;11:60-70. <strong>27.</strong> Sanabria-de
+      la Torre R, Martínez-Heredia L, González-Salvatierra S, et al. Characterization
+      of genetic variants of uncertain significance for the ALPL gene in patients
+      with adult hypophosphatasia. <em>Front Endocrinol (Lausanne).</em> 2022;13:863940.
+      <strong>28.</strong>
       Blueprint Genetics. VUS—the most maligned result in genetic testing. 2019.
       Accessed March 30, 2023.
       <a
@@ -777,9 +804,11 @@ const internalNavLinks = [
       <strong>29.</strong> Beck NM, Sagaser KG, Lawson CS, et al. Not just a carrier:
       clinical presentation and management of patients with heterozygous disease-causing
       alkaline phosphatase (ALPL) variants identified through expanded carrier screening.
-      <em>Mol Genet Genomic Med.</em> 2023;11(1):e2056. <strong>30.</strong> Kishnani PS,
-      Rockman-Greenberg C, Rauch F, et al. Five-year efficacy and safety of asfotase
-      alfa therapy for adults and adolescents with hypophosphatasia. <em>Bone.</em> 2019;121:149-162.
+      <em>Mol Genet Genomic Med.</em> 2023;11(1):e2056. <strong>30.</strong> Kishnani
+      PS, Rockman-Greenberg C, Rauch F, et al. Five-year efficacy and safety of asfotase
+      alfa therapy for adults and adolescents with hypophosphatasia. <em
+        >Bone.</em
+      > 2019;121:149-162.
     </p>
   </References>
 </Layout>
