fix: :lipstick: Update an asset for Case Files Modal on desktop
Update asset of second rad for Anna in Lab Results/Imaging section

--- a/src/components/Case-Files/CaseFileModalDesktop.astro
+++ b/src/components/Case-Files/CaseFileModalDesktop.astro
@@ -556,8 +556,8 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                                     id="pt-2-desktop-image-2"
                                     useDefaultButton={false}
                                 >
-                                    <div class="rad__thumbnail">
-                                        <picture style="max-width: 96px;">
+                                    <div class="rad__thumbnail rad__thumbnail--anna-2">
+                                        <picture>
                                             <button
                                                 data-panzoom-action="zoomToFull"
                                                 data-content-id="pt-2-desktop-image-2"
