fix: :lipstick: Fix text-transform for a letter in Hannah case file
Add style for a letter that in pinch to zoom goes capitalize but outside is lowercase

--- a/src/components/Case-Files/CaseFileModalDesktop.astro
+++ b/src/components/Case-Files/CaseFileModalDesktop.astro
@@ -813,7 +813,7 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                                                 >
                                                 <br />
                                                 <span class="patient--main patient--main-not-capitalize"
-                                                    >Mild knock knees</span
+                                                    ><span class="text--capitalize">m</span>ild knock knees</span
                                                 >
                                             </p>
                                         </div>
