✨ 🐛 Add hover state to several elements according issues from row 23 to row 30

--- a/src/styles/components/_alp-calculator.scss
+++ b/src/styles/components/_alp-calculator.scss
@@ -823,7 +823,7 @@
             margin-bottom: 68px;
 
             &.modifier {
-                background-color: $color-red;
+                // background-color: $color-red;
                 font-family: 'Inter';
                 font-style: normal;
                 font-weight: 600;
