--- a/src/styles/components/_internal-nav.scss
+++ b/src/styles/components/_internal-nav.scss
@@ -114,6 +114,10 @@
                 font-size: 1.5rem;
                 line-height: 36px;
             }
+
+            &:hover {
+                color: $color-red;
+            }
         }
     }
 }
