--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -429,6 +429,11 @@
           text-transform: uppercase;
           padding-top: 0.5rem;
           padding-bottom: 0.5rem;
+
+          &:hover,
+          &.current-page {
+            color: $color-red;
+          }
         }
       }
     }
@@ -461,6 +466,10 @@
           font-size: .875rem;
           font-weight: 600;
           line-height: 1.375rem;
+
+          &:hover {
+            color: $color-red;
+          }
         }
       }
     }
