feat: :construction: Add scroll to top after click on next/prev button on usual suspect modal on desktop
Add scroll to top after click on next/prev button on usual suspect modal on desktop

--- a/src/components/usual-suspects/modals/ModalDesktopNavigation.astro
+++ b/src/components/usual-suspects/modals/ModalDesktopNavigation.astro
@@ -64,6 +64,13 @@ const { type } = Astro.props;
         .querySelector(`.${type} .navigation__item.next`)
         .classList.remove("hidden");
     }
+    const fancyboxSlide = document.querySelector('.fancybox__container[aria-modal="true"] .fancybox__slide')
+    if(fancyboxSlide) {
+      fancyboxSlide.scroll({
+          top: 0,
+          behavior: "smooth"
+      });
+    }
   }
 
   function navigationHandle(links: any, modalArticles: any, type: string) {
