fix: :bug: Fix issue on close usual suspect modal for adults on desktop
Add lines of code to hide/show correct buttons on close event for usual suspects modal for adults

--- a/src/components/usual-suspects/modals/ModalDesktop.astro
+++ b/src/components/usual-suspects/modals/ModalDesktop.astro
@@ -99,6 +99,12 @@ import ModalAdultsDesktop from "./ModalAdultsDesktop.astro";
     }
 
     closingModal() {
+      document
+        .querySelector(`.navigation__item.prev.adults`)
+        .classList.add("hidden");
+      document
+        .querySelector(`.navigation__item.next.adults`)
+        .classList.remove("hidden");
       const modalArticles = document.querySelectorAll(
         `.modal__grids_article.adults`
       );
