enter site form updated based on pdf comment

--- a/src/components/Enter-Site/Form.astro
+++ b/src/components/Enter-Site/Form.astro
@@ -3,7 +3,7 @@ import ContinueText from "./ContinueText.astro";
 import DetectiveForm from "../DetectiveForm.astro";
 ---
 
-<div class="grid__form">
+<div class="grid__form modifier-enter">
   <DetectiveForm />
   <ContinueText />
 </div><!-- Form -->
