fix: :speech_balloon: Update text under image, Page 44
Update text according to PDF and Figma

--- a/src/components/Case-Files/CaseFileModalDesktop.astro
+++ b/src/components/Case-Files/CaseFileModalDesktop.astro
@@ -659,11 +659,9 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                                             <p class="patient--color-black">
                                                 Nontraumatic tooth loss at age 4
                                             </p>
-                                            <small
-                                                >Reproduced with permission from <br
-                                                /> Kiselnikova L, et al. Clinical
-                                                Case Reports. <br /> 2020;8(5):911-918.</small
-                                            >
+                                            <small>
+                                                <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0.</span>
+                                            </small>
                                         </div>
                                     </div>
                                 </PinchToZoom>
