fix: :lipstick: Fix of pinch to zoom's style for image in page 44
Add a CSS rule to hide long text in pinch to zoom

--- a/src/components/Case-Files/CaseFileModalDesktop.astro
+++ b/src/components/Case-Files/CaseFileModalDesktop.astro
@@ -655,7 +655,7 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                                                 alt=""
                                             />
                                         </picture>
-                                        <div class="patient">
+                                        <div class="patient patient--hannah-family">
                                             <p class="patient--color-black">
                                                 Nontraumatic tooth loss at age 4
                                             </p>
