--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -345,6 +345,12 @@
             text-transform: unset;
           }
         }
+
+        &--hannah-family {
+          small {
+            display: none;
+          }
+        }
       }
 
       &--anna-2 {
