br added to checkbox label

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6222,31 +6222,33 @@
 /* ------------------------------- enter site ------------------------------------------ */
 .modifier-enter{
         #email{
-            @media screen and (min-width: 1440px) {
-                width: 75%;
+            @media screen and (min-width: 1024px) {
+                width: 89%;
             }
         }
 
         .form__control-checkbox .form__control-label{
-            @media screen and (min-width: 1440px) {
-                font-size: 14px;
-                max-width: 397px;
+            @media screen and (min-width: 1024px) {
+                /* font-size: 14px;
+                max-width: 397px; */
+                width: 426px;
             }
         }
 
         .mx-1{
             text-transform: lowercase;
-            @media screen and (min-width: 1400px) {
-            margin-left: 2rem;
-            margin-right: 2rem;
-            font-size: 13px;
+            @media screen and (min-width: 1024px) {
+            /* margin-left: 2rem;
+            margin-right: 2rem; */
+            //font-size: 13px;
             }
         }
 
         .form__control-file .form__control-input-file{
-            @media screen and (min-width: 1400px) {
-                padding-left: 35px;
-                padding-right: 35px;
+            @media screen and (min-width: 1024px) {
+               /*  padding-left: 35px;
+                padding-right: 35px; */
+                
                 }
         }
 }
