fix: :bug: Fix lines position

--- a/src/styles/components/_skeleton.scss
+++ b/src/styles/components/_skeleton.scss
@@ -1087,6 +1087,10 @@
     padding-bottom: 4rem;
 }
 
+#renal--infants-content {
+    padding-bottom: 4.5rem;
+}
+
 #developmental--infants-content::after {
     content: "";
     width: 50%;
