Update Enter Site Form Styles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4013,6 +4013,7 @@
 
     #hpp-prevalence {
         position: relative;
+
         @media screen and (min-width: 1024px) {
             margin-top: 3rem;
         }
@@ -6220,35 +6221,37 @@
 /* ------------------------------- Site Map page ------------------------------------------ */
 
 /* ------------------------------- enter site ------------------------------------------ */
-.modifier-enter{
-        #email{
-            @media screen and (min-width: 1024px) {
-                width: 75%;
-            }
+.modifier-enter {
+    #email {
+        @media screen and (min-width: 1024px) {
+            width: 84%;
         }
+    }
 
-        .form__control-checkbox .form__control-label{
-            @media screen and (min-width: 1024px) {
-                /* font-size: 14px;
+    .form__control-checkbox .form__control-label {
+        @media screen and (min-width: 1024px) {
+            /* font-size: 14px;
                 max-width: 397px; */
-                width: 426px;
-            }
+            max-width: 426px;
         }
+    }
 
-        .mx-1{
-            text-transform: lowercase;
-            @media screen and (min-width: 1024px) {
-            margin-left: 2rem;
-            margin-right: 2rem;
+    .mx-1 {
+        text-transform: lowercase;
+
+        @media screen and (min-width: 1024px) {
+            margin-left: 1rem;
+            margin-right: 1rem;
             font-size: 13px;
-            }
         }
+    }
 
-        .form__control-file .form__control-input-file{
-            @media screen and (min-width: 1024px) {
-                padding-left: 35px;
-                padding-right: 35px;
-                }
+    .form__control-file .form__control-input-file {
+        @media screen and (min-width: 1024px) {
+            padding-left: 35px;
+            padding-right: 35px;
         }
+    }
 }
+
 /* ------------------------------- enter site ------------------------------------------ */
