fix: :speech_balloon: Update text, Page 120
Update text under image on family history section of Hannah's info in mobile modal

--- a/src/components/Case-Files/CaseFileModal.astro
+++ b/src/components/Case-Files/CaseFileModal.astro
@@ -470,7 +470,7 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
               </div>
             </PinchToZoom>
             <p class="pt-3-image-1--permissions">
-              Reproduced with permission from Kiselnikova L, et al. <em>Clinical Case Reports.</em> 2020;8(5):911-918.
+              <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0.</span>
             </p>
           </Fragment>
           <Fragment slot="symptoms">
