🐛 ✨ Adjust some styles

--- a/src/styles/components/_skeleton.scss
+++ b/src/styles/components/_skeleton.scss
@@ -882,7 +882,7 @@
 
         &--infants {
             height: fit-content;
-            min-height: 520px;
+            // min-height: 520px;
             padding: 2rem 1.5rem;
             margin-top: 23px;
 
