--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5192,7 +5192,8 @@
             }
 
             .hpp-multisystemic__study--bigger {
-                margin-left: 0;
+                margin-left: auto;
+                margin-right: auto;
                 width: fit-content;
 
                 .hpp-multisystemic__study--text {
@@ -5430,6 +5431,10 @@
                     @media screen and (min-width: 700px) {
                         max-width: 50ch;
                         text-align: center;
+
+                        sup {
+                            left: 0px;
+                        }
                     }
                 }
             }
