--- a/src/components/AlpCalculator.astro
+++ b/src/components/AlpCalculator.astro
@@ -14,7 +14,7 @@ import References from "../components/References.astro";
         <div class="red-string-1"></div>
 
         <h1 class="alp-calculator__title">
-            Asses your patient's <br /> alkaline phosphatase levels
+            Assess your patient's <br /> alkaline phosphatase levels
         </h1>
 
         <strong class="alp-calculator__strong-heading"
@@ -38,7 +38,7 @@ import References from "../components/References.astro";
                 <p class="graphic-left-text">ALP Activity (U/L)</p>
                 <p class="graphic-desc">null</p>
 
-                <!-- 
+                <!--
                     <p class="graphic-left-text">Based on the age- and sex-adjusted reference range4-8</p> -->
                 <!-- <img src="/assets/images/alp-calculator/adult-female.svg" alt="" class="adult-female"> -->
                 <img
