assets and spacing updated according to pdf comments

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -355,7 +355,7 @@ const internalNavLinks = [
             </p>
           </div>
           <p class="number__kpi-description color--saffron-mango">
-            is considered LOW in <span class="color--buff">adults</span>
+            is considered LOW in adults
           </p>
           <p class="number__kpi-description">
             <sup>*</sup>Limitations: An alkaline phosphatase level of below 40 U/L is not conclusive for a diagnosis of hypophosphatasia. Patient should be evaluated for other symptoms of hypophosphatasia and differential diagnoses should be ruled out. Check with your lab for their appropriate age- and sex-adjusted reference ranges.<sup>20-24</sup>
@@ -386,6 +386,7 @@ const internalNavLinks = [
             <source
               srcset="/assets/images/alpd-academy/7m-age-and-sec-chart-desktop.png"
               media="(min-width: 850px)"
+              
             />
             <source
               srcset="/assets/images/alpd-academy/7m-age-and-sec-chart-tablet.png"
@@ -394,6 +395,7 @@ const internalNavLinks = [
             <img
               src="/assets/images/alpd-academy/7m-age-and-sec-chart-mobile.png"
               alt=""
+              style="max-width: 1032px;margin: auto;"
             />
           </picture>
           <p class="chart__paragraph">
