fix: :speech_balloon: Lowercase letter 'o', Page 2
Lowercase letters 'o' on optional word under buttons for photo options  in customize video form

--- a/src/components/DetectiveForm.astro
+++ b/src/components/DetectiveForm.astro
@@ -88,7 +88,7 @@
           />
           <label for="taked-photo">Take Photo</label>
         </div>
-        <p class="form__control-label">(Optional)</p>
+        <p class="form__control-label">(optional)</p>
       </div>
       <p class="mx-1">Or</p>
       <div class="form__control-file">
@@ -101,7 +101,7 @@
           />
           <label for="uploaded-photo">Upload Photo</label>
         </div>
-        <p class="form__control-label">(Optional)</p>
+        <p class="form__control-label">(optional)</p>
       </div>
     </div>
   </div>
